archive/summer2023/setup/rules.v4
# Generated by iptables-save v1.8.4 on Fri Jul  7 21:06:39 2023
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT

#dns
-A INPUT -p udp --source-port 53 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 443 -j ACCEPT

# SSH and ping
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

#nodes 
-A INPUT -p tcp -s 192.168.0.0/24 -j ACCEPT
-A OUTPUT -p tcp -d 192.168.0.0/24 -j ACCEPT

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri Jul  7 21:06:39 2023
# Generated by iptables-save v1.8.4 on Fri Jul  7 21:06:39 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o wlan0 -j MASQUERADE
COMMIT
# Completed on Fri Jul  7 21:06:39 2023
